# patherea-p2p

./: .gitignore  README.md  pyproject.toml  setup.cfg  train_eval_patherea.sh
src/p2p/: run_aikinet_multiple.py
src/p2p/configs/: config.yaml
src/p2p/configs/dataset/: patherea.yaml
src/p2p/configs/model/: P2PNet.yaml
src/p2p/datasets/: aikinet_multiple.py
src/p2p/models/: p2pnet.py  utils.py
src/p2p/models/backbones/: convnext.py  convnext_torchvision.py  vgg.py  vit_adapter.py
src/p2p/models/backbones/utils/: adapter_modules.py  convnext_official.py  ms_deform_attn.py  my_checkpoint.py  vit.py
src/p2p/runners/: aikinet_runner_multiple.py  base_runner.py
src/p2p/utils/: utils.py
